# Stream-Reasoning-with-Differential-Dataflow

./: .gitignore  Cargo.toml  README.md
data/: README.md  University0_0.nt  University0_1.nt  University0_10.nt  University0_11.nt  University0_12.nt  University0_13.nt  University0_14.nt  University0_2.nt  University0_3.nt  University0_4.nt  University0_5.nt  University0_6.nt  University0_7.nt  University0_8.nt  University0_9.nt
experiments/simple_logic_lubm_data/: Cargo.toml  HOW_TO.md
experiments/simple_logic_lubm_data/data_for_example/abox/: abox.nt
experiments/simple_logic_lubm_data/data_for_example/tbox/: tbox.nt
experiments/simple_logic_lubm_data/data_for_example/updates/: a_box_addition_test.nt  a_box_deletion_test.nt  t_box_addition_test.nt  t_box_deletion_test.nt
experiments/simple_logic_lubm_data/src/: .gitignore  lib.rs  main.rs
experiments/simple_logic_test/: Cargo.toml
experiments/simple_logic_test/src/: lib.rs  main.rs
output/: README.md
reasoning_service/: Cargo.toml
reasoning_service/src/: lib.rs  main.rs  model.rs
src/: eval.rs  lib.rs  mod.rs  model.rs  ntriples.lalrpop
src/encoder/: bijective.rs  encoder.rs  encoding_logic.rs  mod.rs  parser.rs  triple.rs
tests/: ;w  simple_data.rs
