[package]
name = "reasoning_service"
version = "0.1.0"
authors = ["jimmy_hypi <xhimi.hypi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rio_api = "0.4.0"
rio_xml = "0.4.0"
timely = "0.11.1"
differential-dataflow = "0.11.0"
abomonation = "0.7.3"
abomonation_derive = "0.5.0"
