[package]
name = "reasoning_service"
version = "0.1.0"
authors = ["jimmy_hypi <xhimi.hypi@gmail.com>"]
edition = "2018"

[build-dependencies]
lalrpop = {version = "0.19.1", features = ["lexer"] }

[dependencies]
rio_api = "0.5.0"
rio_xml = "0.4.0"
timely = "0.11.1"
differential-dataflow = "0.11.0"
abomonation = "0.7.3"
abomonation_derive = "0.5.0"
lalrpop-util = "0.19.1"
regex = "1"
env_logger = "0.8.2"
log = "0.4.11"
bimap = "0.5.3"
structopt = "0.3.21"
plotlib = "0.5.1"
walkdir = "2.3.1"
strum = "0.20.0"
strum_macros = "0.20.1"
