[package]
name = "simple_logic_lubm_data"
version = "0.1.0"
authors = ["jimmy-hypi <xh.hypi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
timely = "0.11.1"
differential-dataflow = "0.11.0"
reasoning_service = { path = "../../" }
env_logger = "0.8.2"
structopt = "0.3.21"
walkdir = "2.3.1"
plotlib = "0.5.1"
